--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Android程序崩溃提示异常信息界面</string>
+    <string name="app_name">Android程序崩溃显示异常信息页面</string>
     <string name="button01">提示Toast</string>
     <string name="button02">制造异常</string>
     <string name="crash_info">异常信息</string>
